whole code refactor modules impl

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
         <title>Atomy</title>
     </head>
     <body>
-        <table></table>
-
-        <script src="atoms.js"></script>
+        <script type="module" src="main.js"></script>
     </body>
 </html>
