--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <link rel="stylesheet" href="styles.css">
-        <title>Atomy</title>
-    </head>
-    <body>
-        <script type="module" src="main.js"></script>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Atomy</title>
+  </head>
+  <body>
+    <script type="module" src="./out/main.js"></script>
+  </body>
 </html>
